      parsed configuration" (Closes: #350285)
    + Fix "AddOutputFilterByType is deprecated but used in deflate.conf"
      (Closes: #601033)
    + Fixes "Renegotiation on POST request fails intermittently"
      (Closes: #601606)
    + Allows configuring source address for proxy requests. (Closes: #465283)
    + Supports CONNECT request through https. (Closes: #307298)

  * Refresh patches but leave all hunks unchanged where possible. Notable
    changes are:
    + [AT] 202_suexec-custom: Keep functionality as is, but rewrite smaller
      parts of the patch to build two binaries: suexec-pristine and suexec-custom
      (see below)
    + [AT] 201_build_suexec-custom: Patch the makefile to build
      "suexec-pristine" instead. Aside of that, refresh hunks.
    + [AT] 010_fhs_compliance: Drop config.layout patches. These have been
      applied upstream
    + [JMV] Drop patches:
      + 004_usr_bin_perl_0wnz_j00: printenv exemple doesn't refer to
        /usr/local/bin/perl anymore
      + 008_make_include_safe: Include doesn't support directory anymore.
        Include dir/*.conf must be used.
      + 009_apache2_has_dso: Upstream is no longer testing DSO is available. So
        we don't need to remove that test anymore.
     + [JMV] Reresh 031_apxs2_sucks_more: <explain what you did>


  [ Arno Töll ]

  * Rewrite most parts of debian/rules / debhelper configuration.
    + move cronjob and init script to debhelper configuration files
      (apache2.cron.daily and apache2.init respectively)
    + move man pages to debian/manpages
  * Push standards version to 3.9.3 - no special changes required
  * Refactor binary packages, now as things simplified. MPMs are simple
    modules now, they can be bundled into the same binary package which do not
    need to conflict with each other. Thus, Apache now primarily consists of the
    following packages:
    + apache2 - configuration files and init scripts, Debian specific helper
      scripts