@@ -1,3 +1,2 @@
 usr/include/apache2
 usr/share/apache2/build
-usr/share/man/man8
