@@ -1,2 +1,1 @@
-etc/apache2/conf.d
 usr/share/doc/apache2-doc
