@@ -1,5 +1,4 @@
 debian/bash_completion/apache2	/etc/bash_completion.d/
-/etc/apache2			/usr/share/doc/apache2-doc/examples
 debian/config-dir/*		/etc/apache2
 debian/a2enmod			/usr/sbin
 debian/apache2ctl		/usr/sbin
